[gd_scene load_steps=7 format=2]

[ext_resource path="res://DodgeTrack.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://GameOver.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 90, 370 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_top = 2
border_color = Color( 1, 1, 1, 1 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameStartCountdown" type="Timer" parent="."]

[node name="SpawnEnemy" type="Timer" parent="."]
process_mode = 0

[node name="IncreasePoints" type="Timer" parent="."]

[node name="DodgeTracks" type="Node2D" parent="."]

[node name="DodgeTrack" parent="DodgeTracks" instance=ExtResource( 1 )]
position = Vector2( 36, 0 )

[node name="DodgeTrack2" parent="DodgeTracks" instance=ExtResource( 1 )]
position = Vector2( 108, 0 )

[node name="DodgeTrack3" parent="DodgeTracks" instance=ExtResource( 1 )]
position = Vector2( 180, 0 )

[node name="DodgeTrack4" parent="DodgeTracks" instance=ExtResource( 1 )]
position = Vector2( 252, 0 )

[node name="DodgeTrack5" parent="DodgeTracks" instance=ExtResource( 1 )]
position = Vector2( 324, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 72, 333 )

[node name="Enemies" type="Node2D" parent="."]

[node name="TouchControls" type="Node" parent="."]

[node name="LeftControl" type="TouchScreenButton" parent="TouchControls"]
shape = SubResource( 1 )

[node name="RightControl" type="TouchScreenButton" parent="TouchControls"]
position = Vector2( 180, 0 )
shape = SubResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownLabel" type="Label" parent="UI/CenterContainer"]
margin_left = 20.0
margin_top = 13.0
margin_right = 20.0
margin_bottom = 27.0

[node name="BottomContainer" type="PanelContainer" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomData" type="MarginContainer" parent="UI/BottomContainer"]
margin_top = 2.0
margin_right = 360.0
margin_bottom = 32.0
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/BottomContainer/BottomData"]
margin_left = 16.0
margin_top = 8.0
margin_right = 344.0
margin_bottom = 22.0

[node name="PointsLabel" type="Label" parent="UI/BottomContainer/BottomData/HBoxContainer"]
margin_right = 56.0
margin_bottom = 14.0
text = "Points: 0"

[node name="GameOver" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="timeout" from="GameStartCountdown" to="." method="_on_StartCountdown_timeout"]
[connection signal="timeout" from="SpawnEnemy" to="." method="_on_SpawnEnemy_timeout"]
[connection signal="timeout" from="IncreasePoints" to="." method="_on_IncreasePoints_timeout"]
[connection signal="pressed" from="TouchControls/LeftControl" to="." method="_on_LeftControl_pressed"]
[connection signal="pressed" from="TouchControls/RightControl" to="." method="_on_RightControl_pressed"]
